updated code complete

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -270,7 +270,7 @@
                           <tr>
                             <td> Wed, Mar 31</td>
                             <td> Refactoring </td>
-                            <td> Chapter 24 from Code Complete 2nd Edition (access the <a href="https://ucblibraries.summon.serialssolutions.com/search?s.fvf%5B%5D=ContentType%2CBook+%2F+eBook&s.fvf%5B%5D=Library%2CInternet+Access&s.q=Code+Complete#!/search?ho=t&fvf=ContentType,Book%20%2F%20eBook,f%7CLibrary,Internet%20Access,f&l=en&q=Code%20Complete
+                            <td> Chapter 24 from Steve McConnell's Code Complete, 2nd Edition (access the <a href="https://ucblibraries.summon.serialssolutions.com/search?s.fvf%5B%5D=ContentType%2CBook+%2F+eBook&s.fvf%5B%5D=Library%2CInternet+Access&s.q=Code+Complete#!/search?ho=t&fvf=ContentType,Book%20%2F%20eBook,f%7CLibrary,Internet%20Access,f&l=en&q=Code%20Complete
 ">ebook for free from CU Libraries</a>)</td> 
                             <td> </td>
                           </tr>
