--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -282,13 +282,20 @@
                           </tr>
                           <tr>
                             <td> Mon, Apr 5</td>
-                            <td> Code Smells and Refactoring</td>
+                            <td> Overview of Refactoring Research</td>
                             <td> <a href="https://blog.codinghorror.com/code-smells/">Code Smells Blog</a></td> 
                             <td> Undergrad Milestone 5</td>
                           </tr>
                           <tr>
+                            <td> Wed, Apr 7</td>
+                            <td> Eliminating Code Clones with Refactoring</td>
+                            <td> <a href="https://users.encs.concordia.ca/~nikolaos/publications/ICSE_2017.pdf">Clone Refactoring with Lambda Expressions (ICSE'17)</a></td> 
+                            <td> </td>
+                          </tr>
+                          
+                          <tr>
                             <td> Fri, Apr 9</td>
-                            <td> TBA </td>
+                            <td> Code Smells and Refactoring </td>
                             <td> </td>
                             <td> </td>
                           </tr>
