updated M3 for grad students

--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -295,7 +295,7 @@
                           
                           <tr>
                             <td> Fri, Apr 9</td>
-                            <td> Code Smells and Refactoring </td>
+                            <td> Part 2: Demo on Eliminating Duplication through Refactoring </td>
                             <td> </td>
                             <td> </td>
                           </tr>
