--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -38,9 +38,8 @@
         <li><a href="projectTracks.html">Project Tracks</a></li>
         <li><a href="gradProjectProposal.html">Grad Project Proposal</a></li>
         <li><a href="gradMilestone1.html">Grad Milestone: Topic Outline</a></li>
-        <li><a href="gradMilestone2.html">Grad Milestone 2</a></li>
-        
-        <li><a href="gradMilestone3.html">Grad Milestone 3</a></li>
+        <li><a href="gradMilestone2.html">Grad Milestone 2</a></li>     
+        <li><a href="gradMilestone3.html">Grad Milestone 3: Results</a></li>
         <!-- <li><a href="milestone4.html">Milestone 4</a></li>
         -->
         
