--- a/courses/OOAD_Sp21/sidebar.html
+++ b/courses/OOAD_Sp21/sidebar.html
@@ -40,8 +40,8 @@
         <li><a href="gradMilestone1.html">Grad Milestone: Topic Outline</a></li>
         <li><a href="gradMilestone2.html">Grad Milestone 2</a></li>     
         <li><a href="gradMilestone3.html">Grad Milestone 3: Results</a></li>
-        <!-- <li><a href="milestone4.html">Milestone 4</a></li>
-        -->
+        <li><a href="gradFinalMilestone.html">Grad Final Project</a></li>
+        
         
         <!--
         <li>Final Project</li>
