--- a/courses/OOAD_Sp21/gradMilestone3.html
+++ b/courses/OOAD_Sp21/gradMilestone3.html
@@ -97,13 +97,8 @@
         </div>
        
        <h3>HAND-IN:</h3>
-        <p> Each team should submit the submit a PDF version of the Presentation (you can use PowerPoint, OpenOffice, or Keynote, but please convert them to PDF) addressing the points in the templates above. 
-        Submit the PDF on Canvas, <b>before 1PM on 04/16</b>. 
-                        Afterwards, the professor will load all presentations on his laptop. 
-                        Students will have <b>four minutes</b> on class on Friday (03/19) to present their project on Zoom (while the professor will share the slides from his laptop - this will eliminate valuable time lost in switching screen sharing on Zoom). 
-                        For students who are not attending the live session of the class, please post the link to your self-recorded 4-minute video on the front page.
-        <p> Only one student from your whole team needs to submit in Canvas, and make sure that you list the name of everyone in the team on both PDFs.                          
-
+        There is nothing to hand-in for this Milestone. Just present your current results in class on Friday, April 16th. Please use the above template for your presentation, and plan to present in 4 minutes or less.
+        
         <h3>NOTES:</h3>
         <p>
         The Final Project
