--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -315,9 +315,9 @@
                           </tr>
                            <tr>
                             <td> Fri, Apr 16</td>
-                            <td> Grad student Milestone 3 Presentations.</td>
+                            <td> Project clinic for Grad student Milestone 3 results.</td>
                             <td> </td>
-                            <td> Undergrad Milestone 6.</td>
+                            <td> Undergrad Milestone 6 was merged with Final Project Submission and is due on Sun, April 25th.</td>
                           </tr>
                            <tr>
                             <td> Last week of classes</td>
