--- a/courses/OOAD_Sp21/schedule.html
+++ b/courses/OOAD_Sp21/schedule.html
@@ -319,11 +319,42 @@
                             <td> </td>
                             <td> Undergrad Milestone 6 was merged with Final Project Submission and is due on Sun, April 25th.</td>
                           </tr>
-                           <tr>
-                            <td> Last week of classes</td>
-                            <td> Grad students Project Presentations </td>
+                          <tr>
+                            <td> Mon, Apr 19</td>
+                            <td> Architectural Patterns</td>
+                            <td> <a href="https://en.wikipedia.org/wiki/Software_architecture">Software Architecture</a>, <a href="https://en.wikipedia.org/wiki/Architectural_pattern">Architectural Patterns</a>, <a href="https://en.wikipedia.org/wiki/Multitier_architecture">3-Tier Architecture</a>, <a href="https://en.wikipedia.org/wiki/Model–view–controller">MVC</a></td> 
+                            <td> Quiz 9 (in Canvas)</td>
+                          </tr>
+                          
+                          <tr>
+                            <td> Wed, Apr 21</td>
+                            <td> Course Review, about Final Exam</td>
+                            <td> </td> 
                             <td> </td>
-                            <td> Undergrad Final Project Submission and Documentation</td>
+                          </tr>
+                         <tr>
+                            <td> Fri, Apr 23</td>
+                            <td> No class - prepare the project hand-in</td>
+                            <td> </td>
+                            <td> Teams use the class time to work on final project hand-in</td>
+                          </tr>
+                          <tr>
+                            <td> Sun, April 25</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> Undergrad Final Project Submission and Documentation (in Canvas)</td>
+                          </tr>
+                           <tr>
+                            <td> Mon, April 26</td>
+                            <td> Grad student Final Project Presentations #1</td>
+                            <td> </td>
+                            <td> </td>
+                          </tr>
+                          <tr>
+                            <td> Wed, April 28</td>
+                            <td> Grad student Final Project Presentations #2</td>
+                            <td> </td>
+                            <td> </td>
                           </tr>
                           <tr>
                             <td> Wed, May 5 at 1:30pm</td>
