updated hourly link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ cellSpacing=5 cellPadding=5 border=0>
             </table>
             
             <P style="color:red"> 
-            <Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info </a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">here</a>
+            <Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
             <br>
             <br>
             <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, I would love to schedule a discovery session to learn how we can serve you with our upcoming <a href="http://ppicenter.org">NSF industry-university consortium</a>.
