--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -8,14 +8,14 @@ and open the template in the editor.
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <title>CSCI 7000-005 Fall 2021: Pervasive Personalized Intelligence for IoT Systems</title>
+    <title>CSCI 7000-005 Fall 2021: Intelligence for IoT Systems</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
         <!-- Page Title -->
-        <h1> CSCI 7000-005, 7000-006 Fall 2021: Pervasive Personalized Intelligence for IoT Systems</h1>
+        <h1> CSCI 7000-005, 7000-006 Fall 2021: Intelligence for IoT Systems</h1>
         <!-- End Page Title -->
         <!-- Nav bar -->
         <div>
