--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -76,7 +76,7 @@ is predictive instead of reactive, thus making processes more efficient and savi
 money.
 
        
-       <p> In this highly interactive class we will be investigating 
+       <p> In this highly interactive, Seminar-style class featuring Instructor-guided exploration and student-led discussions, we will be investigating 
         (i) innovative use of IoT software systems (compelling applications) and (ii) the research technical thrusts that enable 
         the exciting applications of the future. Our exploration will consist of in-class 
         discussions of the literature, interactions with industry thought leaders, and team projects that encourage risk taking.
