--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -36,7 +36,8 @@ and open the template in the editor.
         <div>
             <p>
                 Tue and Thu, 5:30-6:45 PM<br />
-                On Campus location: ECCS 1B14 
+                On Campus location: ECCS 1B14 <br /> 
+                Online (for students in section 7000-06)
             </p>
         </div>
 
