--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ cellSpacing=5 cellPadding=5 border=0>
             </table>
             
             <P style="color:red"> 
-            <Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
+            <!--><Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
             <br>
-            <br>
+            <br> -->
             <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, I would love to schedule a discovery session to learn how we can serve you with our upcoming <a href="http://ppicenter.org">NSF industry-university consortium</a>.
             <br>
            <!-- <br><Strong> Open Positions: </Strong> looking for a postdoc to join my team. -->
@@ -115,6 +115,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
+            <LI> Aug 2021: Congratulations to my PhD student <a href="https://ameyaketkar.github.io">Ameya Ketkar</a> for successfully defending his PhD dissertation on Automating Type Changes. And many thanks to collaborators, colleagues, and members of his committee: it truly takes a village to raise a world-class PhD researcher.
             <LI> March 2020: I wrote a blog on <a href="https://medium.com/@dannydig/what-students-need-to-hear-from-their-leader-during-crisis-26db4dab7685">What Students Need to hear from their Advisor during Crisis</a>. You can also use other great resources such as my mentor John Maxwell's recent leadership summit on <a href="https://www.johnmaxwellacademy.com/virtual-summit-march">Leading through Crisis</a>
             <LI> Jan 2020: I joined the University of Colorado Boulder as Associate Professor and Director of the <a href="http://ppicenter.org">PPI Center</a>. Thank you OSU and colleagues for 6 wonderful years in Corvallis. 
             <LI> Oct 2019: <a href="https://leadership.engineering.oregonstate.edu/2019-summit-speaker-bios#overlay-context=home">Inspiring our CoE students</a> to grow personally and professionally. I am inspired myself by our engaged industry partners and how dedicated they are to the students' success. 
