added Zoom link

--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
             <p>
                 Tue and Thu, 5:30-6:45 PM<br />
                 On Campus location: ECCS 1B14 <br /> 
-                Online (for students in section 7000-06)
+                Zoom (for students in section 7000-06):  https://cuboulder.zoom.us/j/99742564501 (requires authentification to join, please log in from your CU Boulder Zoom account)
             </p>
         </div>
     
