added links to w1_1

--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -122,7 +122,7 @@ money.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Course Introduction and discussing your expectations.</li>
+                <li>Course Introduction and discussing your expectations. <a href="https://cuboulder.zoom.us/rec/share/FwChH7icMPzY76eM6KGW5LnIvq38zGP31bqn8AQ-VNOUPqJ7df6ny5xFqGR1aIBs.9vd1xa2PXJb4ipee">Video recording</a>, and <a href="./pdfs/w1_1_introduction.pdf">slides</a>.</li>
                 <li>Read this excellent resource on how to <a class='urllink' href='http://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html' rel='nofollow'>Read an Engineering Research paper</a> (by William Griswold). </li>
 
                 </ul>
