added link to Malinda's paper

--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -133,7 +133,7 @@ money.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Trends in evolution of ML code-bases (link for the reading to be posted soon).</li>
+                <li>Trends in evolution of ML code-bases (link for this <a href="https://drive.google.com/drive/folders/1YeG-qB00I6Yn7Jiq_B7kfRc1KkOiK_zf">required reading</a>, please do not post elsewhere).</li>
                 <li>Read course syllabus (and other info on this page). </li>
                 <li>Sign up on <a class='urllink' href='http://piazza.com/colorado/fall2021/csci70000056' rel='nofollow'>Piazza</a>.</li>
                 </ul>
