--- a/courses/csci7000-005_F21/index.html
+++ b/courses/csci7000-005_F21/index.html
@@ -32,12 +32,13 @@ and open the template in the editor.
             </nav>
         </div>
         <!-- End Nav bar -->
+      <h3>VIP: This class has been rescheduled for a future semester, please contact professor Dig if you want to stay informed about the next offering.
+</h3>  
       <h3>TIME AND LOCATION</h3>
         <div>
-            <p>
-                Tue and Thu, 5:30-6:45 PM<br />
-                On Campus location: ECCS 1B14 <br /> 
-                Zoom (for students in section 7000-06):  https://cuboulder.zoom.us/j/99742564501 (requires authentification to join, please log in from your CU Boulder Zoom account)
+                <strike>Tue and Thu, 5:30-6:45 PM</strike><br />
+                <strike>On Campus location: ECCS 1B14</strike> <br /> 
+                <strike>Zoom (for students in section 7000-06):  https://cuboulder.zoom.us/j/99742564501 (requires authentification to join, please log in from your CU Boulder Zoom account)</strike>
             </p>
         </div>
     
