updated google citations

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ cellSpacing=5 cellPadding=5 border=0>
   
  <P>He (co-)authored 50+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">4200+ times</a>. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">5500+ times</a>. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
  4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
  He released 9 software systems, among them the
@@ -115,6 +115,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
+            <LI> Sept 2021: Congratulations to my PhD student <a href="">Malinda Dilhara</a> for winning the first prize in the ACM Student Research Competition at the flagship ACM conference in SE (FSE'21) for novel research that improves the productivity of ML engineers.
             <LI> Aug 2021: Congratulations to my PhD student <a href="https://ameyaketkar.github.io">Ameya Ketkar</a> for successfully defending his PhD dissertation on Automating Type Changes. And many thanks to collaborators, colleagues, and members of his committee: it truly takes a village to raise a world-class PhD researcher.
             <LI> March 2020: I wrote a blog on <a href="https://medium.com/@dannydig/what-students-need-to-hear-from-their-leader-during-crisis-26db4dab7685">What Students Need to hear from their Advisor during Crisis</a>. You can also use other great resources such as my mentor John Maxwell's recent leadership summit on <a href="https://www.johnmaxwellacademy.com/virtual-summit-march">Leading through Crisis</a>
             <LI> Jan 2020: I joined the University of Colorado Boulder as Associate Professor and Director of the <a href="http://ppicenter.org">PPI Center</a>. Thank you OSU and colleagues for 6 wonderful years in Corvallis. 
