added class webpage for Spring'22

--- a/teaching.html
+++ b/teaching.html
@@ -48,7 +48,7 @@ cellSpacing=5 cellPadding=5 border=0>
                
             <h2>University courses</h2> 
             <ul>
-            <li><Strong>Fall'21:</Strong> <a href="https://danny.cs.colorado.edu/courses/csci7000-005_F21/">Intelligence for IoT Systems (CSCI 7000-005)</a>. Grad course at CU Boulder. 
+            <li><Strong>Spring'22:</Strong> <a href="https://danny.cs.colorado.edu/courses/csci7000-008_Sp22/">Software Development for IoT Systems (CSCI 7000-008)</a>. Grad course at CU Boulder. 
             <li><Strong>Spring'21:</Strong> <a href="http://danny.cs.colorado.edu/courses/OOAD_Sp21">Object-Oriented Analysis and Design (CSCI 4448/5448)</a>. Grad/undergrad course at CU Boulder. 
             <li><Strong>Spring'19:</Strong> <a href="http://web.engr.oregonstate.edu/~digd/courses/cs563_Sp19">Software Maintenance and Evolution (CS563)</a>. Grad course at OSU. 
             <li><Strong>Spring'18:</Strong> <a href="http://web.engr.oregonstate.edu/~digd/courses/cs563_S18">Software Maintenance and Evolution (CS563)</a>. Grad course at OSU. 
