--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -143,6 +143,7 @@ money.
             <td> 
                  <ul>
                 <li>Growth lessons from a decade of refactoring research.</a>
+                <li> Interview with <a href="https://www.linkedin.com/in/steve-brumer-9b737a/">Steve Brumer</a> from BH IoT Group.
                  </ul>
             </td>
         </tr>
