added companion data

--- a/research.html
+++ b/research.html
@@ -170,9 +170,9 @@ cellSpacing=5 cellPadding=5 border=0>
 			            <td> FSE 2020
 						<td> <a href="./papers/Understanding_Type_Changes_in_Java.pdf">Understanding Type Changes in Java</a>
 						<br> Ameya Ketkar, Nikolaos Tsantalis, and Danny Dig
-                        <br> To Appear in Proceedings of <Strong>FSE'20</Strong>, 11 pages, Sacramento, CA, USA, Oct 2020.
+                        <br> To Appear in Proceedings of <Strong>FSE'20</Strong>, pp 629-641, Sacramento, CA, USA, Oct 2020.
                         <br>  Acceptance ratio: 28% (101/360) 
-                        <br>  Companion webpage
+                        <br>  Companion webpage: <a href="https: //doi.org/10.5281/zenodo.3906493">Tools</a> and <a href="https://doi.org/10.5281/zenodo.3906503">Data</a>
                         
 			 			<tr> 
 			            <td> ICSE 2019
