--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -135,7 +135,7 @@ money.
                 <ul>
                 <li>Trends in evolution of ML code-bases used in IoT services</li>
                 <li>Read course syllabus (and other info on this page). </li>
-                <li>Sign up on <a class='urllink' href='piazza.com/colorado/spring2022/csci7000008' rel='nofollow'>Piazza</a>.</li>
+                <li>Sign up on <a class='urllink' href='http://piazza.com/colorado/spring2022/csci7000008' rel='nofollow'>Piazza</a>.</li>
                 </ul>
             </td>
         </tr>
