updated piazza link

--- a/courses/csci7000-008_Sp22/syllabus.html
+++ b/courses/csci7000-008_Sp22/syllabus.html
@@ -59,7 +59,7 @@ and open the template in the editor.
 
         <h3>NEWSGROUP</h3>
         <div class="textBody">
-            <p>All written communication with the staff and other students should be handled through <a href="piazza.com">Piazza</a> (you can post public/private questions).</p>
+            <p>All written communication with the staff and other students should be handled through <a href="https://piazza.com/class/ky9a85s598o2af">Piazza</a> (you can post public/private questions).</p>
         </div>
         
         <h3>COURSE LOAD</h3>
@@ -84,7 +84,7 @@ and open the template in the editor.
             </ul>
         </div>
         
-        <h3>NO LAPTOP POLICY</h3>
+        <h3>NO LAPTOP POLICY -- for when class is held in person on Campus</h3>
         <div>
             <p>Several studies and anecdotal experience shows that laptops are a distraction in the classroom - they disrupt learning, lower the performance of 
             students who use them, and even distract the other students. Here is an article that discusses some of the issues: 
