updated reading for Day 2

--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -133,7 +133,7 @@ money.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Trends in evolution of ML code-bases used in IoT services</li>
+                <li>Read (and write a critique) for <a href="./pdfs/ICSE2022_Repetitive_Changes_in_Python_ML_Systems.pdf">this paper</a> to appear at ICSE'22</li>
                 <li>Read course syllabus (and other info on this page). </li>
                 <li>Sign up on <a class='urllink' href='http://piazza.com/colorado/spring2022/csci7000008' rel='nofollow'>Piazza</a>.</li>
                 </ul>
