--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -122,9 +122,9 @@ money.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Course Introduction and discussing your expectations. <a href="https://cuboulder.zoom.us/rec/share/FwChH7icMPzY76eM6KGW5LnIvq38zGP31bqn8AQ-VNOUPqJ7df6ny5xFqGR1aIBs.9vd1xa2PXJb4ipee">Video recording</a>, and <a href="./pdfs/w1_1_introduction.pdf">slides</a>.</li>
+                <li>Course Introduction and discussing your expectations. <a href="https://cuboulder.zoom.us/rec/share/EDje96a4oUvR09bxoPRViIps9oWAwj8j7COn1UCUnaeBpEFWIvJgeumn37XEMw8t.ZbutZMW8If7st8kB">Video recording</a>, and <a href="./pdfs/w1_1_introduction.pdf">slides</a>.</li>
                 <li>Read this excellent resource on how to <a class='urllink' href='http://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html' rel='nofollow'>Read an Engineering Research paper</a> (by William Griswold). </li>
-
+                <li>Sign up on <a class='urllink' href='http://piazza.com/colorado/spring2022/csci7000008' rel='nofollow'>Piazza</a>.</li> 
                 </ul>
             </td>
         </tr>
@@ -133,9 +133,9 @@ money.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Read (and write a critique) for <a href="./pdfs/ICSE2022_Repetitive_Changes_in_Python_ML_Systems.pdf">this paper</a> to appear at ICSE'22</li>
-                <li>Read course syllabus (and other info on this page). </li>
-                <li>Sign up on <a class='urllink' href='http://piazza.com/colorado/spring2022/csci7000008' rel='nofollow'>Piazza</a>.</li>
+                <li>Read (and write a <a href="./paperCritiques.html">paper critique</a>) for <a href="./pdfs/ICSE2022_Repetitive_Changes_in_Python_ML_Systems.pdf">this paper</a> to appear at ICSE'22</li>
+                <li>Read course <a href="./syllabus.html">syllabus</a> (and other info on our class webpage). </li>
+                
                 </ul>
             </td>
         </tr>
