updated Piazza link

--- a/courses/csci7000-008_Sp22/syllabus.html
+++ b/courses/csci7000-008_Sp22/syllabus.html
@@ -59,7 +59,7 @@ and open the template in the editor.
 
         <h3>NEWSGROUP</h3>
         <div class="textBody">
-            <p>All written communication with the staff and other students should be handled through <a href="https://piazza.com/class/ky9a85s598o2af">Piazza</a> (you can post public/private questions).</p>
+            <p>All written communication with the staff and other students should be handled through <a href="piazza.com/colorado/spring2022/csci7000008/home">Piazza</a> (you can post public/private questions).</p>
         </div>
         
         <h3>COURSE LOAD</h3>
