added first paper critique assignment

--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -133,7 +133,7 @@ money.
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Read (and write a <a href="./paperCritiques.html">paper critique</a>) for <a href="./pdfs/ICSE2022_Repetitive_Changes_in_Python_ML_Systems.pdf">this paper</a> to appear at ICSE'22</li>
+                <li>Read (and write a <a href="./paperCritiques.html">paper critique</a>) for <a href="./pdfs/ICSE2022_Repetitive_Changes_in_Python_ML_Systems.pdf">this paper</a> to appear at ICSE'22. After you write the paper critique, please submit it <a href="https://canvas.colorado.edu/courses/82224/assignments/1302421">here on Canvas</a> (due by Wed, Jan 12 at 5pm).</li>
                 <li>Read course <a href="./syllabus.html">syllabus</a> (and other info on our class webpage). </li>
                 
                 </ul>
