updated class schedule and milestone 1 timeline

--- a/courses/csci7000-008_Sp22/milestone1.html
+++ b/courses/csci7000-008_Sp22/milestone1.html
@@ -34,7 +34,7 @@ and open the template in the editor.
         <h3>MILESTONE 1</h3>
         <div>
              <ol>
-                 <li>By now you should have spent some time trying some approaches to solve the problem that your project is addressing. Prepare a 2-page document describing:
+                 <li>By now you should have spent some time thinking about approaches to solve the problem that your project is addressing. Prepare a 2-page document describing:
                     <ul>
                         <li><span class="s2">the research questions that you try to answer. </span>Why do we care about these questions? Why are they compelling? Why are they relevant? How would the world be different if we knew the answer to these questions?</li>
                         <li>the main technical challenges. Why is it not trivial to solve the problem? Present challenges that you already conquered, but also those challenges that you don't know yet how to solve, or new challenges that you discovered while digging deeper into the problem.</li>
@@ -51,7 +51,7 @@ and open the template in the editor.
             </ol>
         </div>
         <h3>HAND-IN:</h3>        
-        <p>Each team should submit the PDF and the Presentation Slides (PDF preferred, or PowerPoint) in Canvas, by 12pm on TBA.</p>
+        <p>Each team should submit the PDF and the Presentation Slides (PDF preferred, or PowerPoint) in Canvas, by 12pm on 02/15.</p>
     </div>         
 </body>
 </html>
