--- a/courses/csci7000-008_Sp22/projectTeams.html
+++ b/courses/csci7000-008_Sp22/projectTeams.html
@@ -27,10 +27,10 @@
         </div>
         <div>
         <p>
-        You have to from project teams by 04/19, before class. The earlier the better. This will give you more time to work on the project.
+        You have to form project teams by 02/10, after class. The earlier the better. This will give you more time to start working on the project and making progress towards <a href="./milestone1.html">Milestone 1</a>.
         </p>
         <p>
-        Send an email to the instructor with your team composition and the (updated if needed) project proposal you want to work on. Use the subject line "CS 563 - Project Teams". The deadline is 04/19, before class (2PM).
+        Post on Piazza your team composition and the (updated if needed) project proposal you want to work on. The deadline is 02/10, after class (5PM).
         </p>
         </div>
     </div>
