--- a/courses/csci7000-008_Sp22/researchProject.html
+++ b/courses/csci7000-008_Sp22/researchProject.html
@@ -43,8 +43,8 @@ and open the template in the editor.
             
             
             <ul>
-                <li><a href="./projectProposal.html">Project Proposal</a> <strong>due TBA</strong></li>
-                <li><a href="./milestone1.html">Milestone 1</a> <strong>due TBA</strong></li>
+                <li><a href="./projectProposal.html">Project Proposal</a> <strong>due 02/01</strong></li>
+                <li><a href="./milestone1.html">Milestone 1</a> <strong>due 02/15</strong></li>
                 <li><a href="./milestone2.html">Milestone 2</a> <strong>due TBA</strong></li>
                 <li><a href="./milestone3.html">Milestone 3</a> <strong>due TBA</strong></li>
                 <li><a href="./milestone4.html">Milestone 4</a> <strong>due TBA</strong></li>
