added readings for next week

--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -239,9 +239,9 @@ money.
         
         <tr>
             <td>02/22</td>
-            <td> Student</td>
+            <td> Doring</td>
             <td> <ul>
-            <li> Paper related to project
+            <li> <a href="https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=1723&context=hc_pubs">An Empirical Study of Refactorings and Technical Debt in Machine Learning Systems</a>, by Tang et. al, ICSE'21.
             </td>
         </tr>
         
