--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -239,7 +239,7 @@ money.
         
         <tr>
             <td>02/22</td>
-            <td> Doring</td>
+            <td> Dorin</td>
             <td> <ul>
             <li> <a href="https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=1723&context=hc_pubs">An Empirical Study of Refactorings and Technical Debt in Machine Learning Systems</a>, by Tang et. al, ICSE'21.
             </td>
