updated with the reading for March 1st

--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -249,7 +249,16 @@ money.
             <td>02/24</td>
             <td>Everyone, Danny Dig</td>
             <td> <ul>
-            <li> Discussion Chapter 2: Put Your Dream to the Test.</li>
+            <li> Discussion Chapter 2: Put Your Dream to the Test. Valorie Burton - coaching questions, Black History Month.</li>
+            </td>
+        </tr>
+        
+        <tr>
+            <td>03/01</td>
+            <td> Carla</td>
+            <td> <ul>
+            <li> <a href="https://danny.cs.colorado.edu/papers/LearningTypeChanges_ICSE22.pdf
+">Inferring and Applying Type Changes</a>, by Ketkar et. al, ICSE'22.
             </td>
         </tr>
         
