--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -288,6 +288,14 @@ money.
             </td>
         </tr>
         
+        <tr>
+            <td>04/28</td>
+            <td> TBA</td>
+            <td> <ul>  
+            <li> Last Day of Class
+            </td>
+        </tr>
+        
          <tr>
             <td>Finals week</td>
             <td>No final exam.</td>
