update with IoT Innovator award

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
+            <LI> Feb 2022: I am honored to receive the IoT Innovator award, and to be in a <a href="https://www.iotinnovator.com/inaugural-iot-czar-of-the-year-awards-for-2021/winners/">community of thought leaders</a> who are shaping the future of IoT systems.
             <LI> Sept 2021: Congratulations to my PhD student <a href="">Malinda Dilhara</a> for winning the first prize in the ACM Student Research Competition at the flagship ACM conference in SE (FSE'21) for novel research that improves the productivity of ML engineers.
             <LI> Aug 2021: Congratulations to my PhD student <a href="https://ameyaketkar.github.io">Ameya Ketkar</a> for successfully defending his PhD dissertation on Automating Type Changes. And many thanks to collaborators, colleagues, and members of his committee: it truly takes a village to raise a world-class PhD researcher.
             <LI> March 2020: I wrote a blog on <a href="https://medium.com/@dannydig/what-students-need-to-hear-from-their-leader-during-crisis-26db4dab7685">What Students Need to hear from their Advisor during Crisis</a>. You can also use other great resources such as my mentor John Maxwell's recent leadership summit on <a href="https://www.johnmaxwellacademy.com/virtual-summit-march">Leading through Crisis</a>
