added Latex template and milestones

--- a/courses/csci7000-008_Sp22/milestone1.html
+++ b/courses/csci7000-008_Sp22/milestone1.html
@@ -42,7 +42,14 @@ and open the template in the editor.
                         <li>find at least 5 pieces of related work, e.g., by searching the ACM DL, Google scholar, or scanning the accepted papers of upcoming conferences (e.g., OOPSLA, FSE). Write a short paragraph about each paper: compare and contrast it to your research, how it is similar, but also what are its shortcomings that are addressed by your research</li>
                     </ul>
                  
-                    Use the <a href="http://www.acm.org/sigs/publications/proceedings-templates" rel="nofollow">ACM SIG template</a> for preparing the document.
+                    Use the <a href="http://www.acm.org/publications/proceedings-templates" rel="nofollow">ACM template</a> for preparing the document.
+                    
+                    <br>You should use the official “ACM Primary Article Template”, as can be obtained from the <a href="http://www.acm.org/publications/proceedings-templates" rel="nofollow">ACM Proceedings template</a> page. LaTeX users should use the sigconf option, as well as the review (to produce line numbers for easy reference). To that end, the following LaTeX code can be placed at the start of the LaTeX document:
+\documentclass[sigconf,review]{acmart}
+
+<br>If you are a user of OverLeaf, the page describes how to use the ACM LaTeX class file on that platform as well.
+
+<br>The webpage provides also a Word Document template. 
                  </li>
                  <li>
                     You will also present in class your current progress. Cover the same points like in the previous bullet, you could even do a demo. 
