--- a/courses/csci7000-008_Sp22/milestone2.html
+++ b/courses/csci7000-008_Sp22/milestone2.html
@@ -40,7 +40,7 @@ and open the template in the editor.
                         <li>a solution section. Typically, this can include some pseudocode along with some English description. You can reuse the motivating example, but now you present the HOW part of your solution. This section might change until the end of the project, especially when you start to evaluate your project against many more real-world projects.</li>
                     </ul>
                  
-                    Use the <a class="urllink" href="http://www.acm.org/sigs/publications/proceedings-templates" rel="nofollow">ACM SIG template</a> for preparing the document.
+                    Use the <a class="urllink" href="https://www.acm.org/publications/proceedings-template" rel="nofollow">ACM SIG template</a> for preparing the document.
                  </li>
                  <li>
                     You will also present in class your current progress. Cover the same points like in the previous bullet, you could even do a demo. 
@@ -50,7 +50,7 @@ and open the template in the editor.
         </div>
         <h3>HAND-IN:</h3>           
         <p>
-        Each team should submit the PDF and the Presentation Slides (PDF preferred, or PowerPoint), in Canvas, by 12pm on TBA. Your PDF file name should include the last names of the people in the team.
+        Each team should submit the PDF and the Presentation Slides (PDF preferred, or PowerPoint), in Canvas, by 12pm on 03/10. Your PDF file name should include the last names of the people in the team.
         </p>
         <h3>NOTES:</h3>
         <p>
