--- a/courses/csci7000-008_Sp22/milestone3.html
+++ b/courses/csci7000-008_Sp22/milestone3.html
@@ -75,7 +75,7 @@ and open the template in the editor.
 
         <h3>HAND-IN:</h3>
         <p>
-            Each team should submit, the PDF and the Presentation Slides (PDF preferred, or PowerPoint), in Canvas, before the class (by 12pm) on TBA.
+            Each team should submit, the PDF and the Presentation Slides (PDF preferred, or PowerPoint), in Canvas, before the class (by 12pm) on 03/29.
         </p>
         <h3>NOTES:</h3>
         <p>
