--- a/courses/csci7000-008_Sp22/researchProject.html
+++ b/courses/csci7000-008_Sp22/researchProject.html
@@ -45,9 +45,9 @@ and open the template in the editor.
             <ul>
                 <li><a href="./projectProposal.html">Project Proposal</a> <strong>due 02/01</strong></li>
                 <li><a href="./milestone1.html">Milestone 1</a> <strong>due 02/15</strong></li>
-                <li><a href="./milestone2.html">Milestone 2</a> <strong>due TBA</strong></li>
-                <li><a href="./milestone3.html">Milestone 3</a> <strong>due TBA</strong></li>
-                <li><a href="./milestone4.html">Milestone 4</a> <strong>due TBA</strong></li>
+                <li><a href="./milestone2.html">Milestone 2</a> <strong>due 03/10</strong></li>
+                <li><a href="./milestone3.html">Milestone 3</a> <strong>due 03/29</strong></li>
+                <li><a href="./milestone4.html">Milestone 4</a> <strong>due 04/19</strong></li>
                 <li><a href="./finalProject.html">Final Project</a> <strong>due Finals Week</strong></li>
             </ul>
         </div>
