--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <!--<Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
             <br>
             <br> -->
-            <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, please watch this short <a href="https://www.youtube.com/watch?v=wq6xQHhJkAs">video invitation</a>. I would love to schedule a discovery session to learn how we can serve you with our <a href="http://ppicenter.org">NSF industry-university consortium</a>.
+            <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, we invite you to our <a href="https://hopin.com/events/nsf-center-on-pervasive-personalized-intelligence-meeting-workshop/registration">hybrid event on April 7-8, 2022</a>. Please watch this short <a href="https://www.youtube.com/watch?v=wq6xQHhJkAs">video invitation</a>. I would love to schedule a discovery session to learn how we can serve you with our <a href="http://ppicenter.org">NSF industry-university consortium</a>.
             <br>
            <!-- <br><Strong> Open Positions: </Strong> looking for a postdoc to join my team. -->
             
@@ -70,40 +70,40 @@ cellSpacing=5 cellPadding=5 border=0>
  He enjoys doing research in Software Engineering, with a focus on 
  interactive program transformations that improve programmer productivity and software quality. 
  He successfully pioneered interactive program transformations by opening the field of refactoring 
- in cutting-edge domains including mobile, concurrency and parallelism, component-based, testing, and end-user programming.
+ in cutting-edge domains including AI/ML, mobile, concurrency and parallelism, component-based, testing, and end-user programming.
  He earned his Ph.D. from the University of Illinois at Urbana-Champaign where his research
  won the best Ph.D. dissertation award, and the First Prize at the ACM
  Student Research Competition Grand Finals. He did a postdoc at MIT.
   
- <P>He (co-)authored 50+ journal and conference papers that appeared in top
+ <P>He (co-)authored 60+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">5500+ times</a>. His research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
- 4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
+ cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">5900+ times</a>. His group's research was recognized with 8 best paper awards at the flagship and top conferences in SE (FSE'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ 4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15, and 3 winners of the ACM Student Research Competition. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
- He released 9 software systems, among them the
+ His research group released dozens of software systems, among them the
  world's first open-source refactoring tool. 
- Some of the techniques he developed are shipping with the
- official release of the popular Eclipse, NetBeans, and Visual Studio development
- environments (of which Eclipse alone had more than 14M downloads in 2014). 
+ Some of the techniques they developed are shipping with the
+ official release of the popular Eclipse, NetBeans, Visual Studio, Android Studio development
+ environments and are used daily by millions of software developers. 
  He has started two popular workshops: Workshop on Refactoring Tools, and
  Hot Topics On Software Upgrades, both had at least five instances. He
  chaired or co-organized 14 workshops and 1 conference (MobileSoft'15), 
- and served as a member of 35 program committees for all top conferences in his area. His
- research is funded by NSF, Boeing, IBM, Intel, Google, and Microsoft.
+ and served as a member of 40+ program committees for all top conferences in his area. He is grateful for
+ research funding from NSF, Boeing, IBM, Intel, Google, Microsoft, NEC, and Trimble.
  <P><STRONG>RESEARCH INTERESTS</STRONG><BR>
-            Successful software undergoes constant change. My research addresses two important questions: 
+            Successful software undergoes constant change. Our research addresses two important questions: 
             <OL>
             <LI>What changes occur most often in practice? 
             <LI>How can we automate them to improve programmers' productivity and software quality? 
              </LI></OL>
-          Over the years I have successfully automated program transformations to (i) retrofit parallelism into sequential code, (ii) improve responsiveness of mobile apps, (iii) upgrade component-based applications, (iv) update obsolete tests, (v) make end-user programs easier to change.<BR>
+          Over the years we have successfully automated program transformations to (i) retrofit parallelism into sequential code, (ii) improve responsiveness of mobile apps, (iii) upgrade component-based applications, (iv) update obsolete tests, (v) make end-user programs easier to change, and (vi) improve productivity of ML engineers.<BR>
           <P>General interests:- <strong>automated refactoring</strong>, interactive program analysis and transformation, 
           design & architectural patterns, and broadly interested in <strong>concurrency and parallelism, mobile computing</strong>, software development processes, program analysis, software testing, and software evolution </P>
             <P></P>
             <P><STRONG>Research Impact:</STRONG></P>
             <UL>
               <LI> our <a href="http://www.learnasync.net">research on detecting async errors</a> in .NET programs now ships with the official release of Microsoft Visual Studio
-              <LI> my <a href="http://dig.cs.illinois.edu/papers/API_Evolution.pdf">ICSM'05 paper</a> wins the Most Influential Paper Award (N-10 years) at ICSME'15. The citation reads "The ICSM'05 paper has had the most impact and has stood the test of time best, it has had a profound influence on the upcoming field of API analysis."
+              <LI> <a href="http://dig.cs.illinois.edu/papers/API_Evolution.pdf">ICSM'05 paper</a> wins the Most Influential Paper Award (N-10 years) at ICSME'15. The citation reads "The ICSM'05 paper has had the most impact and has stood the test of time best, it has had a profound influence on the upcoming field of API analysis."
               <LI> <a href="http://refactoring.info/tools/LambdaFicator">our refactorings</a> that empower Java programmers to use lambda expressions are shipping with the official release of the <a href="http://netbeans.org">NetBeans IDE</a>.
               <LI> PhD research on record-and-replay of API-level refactoring ships with the official release of the <a href="http://eclipse.org">Eclipse IDE</a> and are used by millions of Java developers.
               <LI> the <a href="http://dig.cs.illinois.edu/tools/RefactoringCrawler/">automatic inference</a> of refactorings has been used at large companies like Google and IBM, and dozens of research labs.
@@ -126,11 +126,11 @@ cellSpacing=5 cellPadding=5 border=0>
               <LI> May 2019: Honored to deliver a keynote at <a href="https://2019.techdebtconf.org/home#Speakers">TechDebt'19</a>.
               <LI> Nov 2018: I am fortunate to work with great students like Ameya Ketkar who wins the <a href="https://twitter.com/FSEconf/status/1060538175582547968">Second Prize at the ACM SIGSOFT Student Research Competition</a> at FSE'18.
               <LI> Oct 2018: Thank you to all participants that ensured a succesful Planning Workshop for establishing a new NSF IUCRC on <a href="http://ppicenter.org">Pervasive Personalized Intelligence</a>.
-              <LI> April 2017: Congratulations to my PhD student, Michael Hilton, who successfully defended his PhD dissertation and will join the faculty at Carnegie Mellon University
+             <!-- <LI> April 2017: Congratulations to my PhD student, Michael Hilton, who successfully defended his PhD dissertation and will join the faculty at Carnegie Mellon University
               <LI> March 2017: I am honored to be invited as the keynote speaker at <a href="http://conf.researchr.org/track/gpce-2017/gpce-2017-GPCE-2017">GPCE'17</a>              
               <LI> Sept 2016: Teaching a <a href="http://www.techoregon.org/events/refactoring-asynchronous-execution-mobile-devices">webinar on Refactoring for Mobile Devices</a> hosted by the Technology Association of Oregon.
               <LI> Sept 2016: I am honored to be invited as a keynote speaker at the <a href="http://www.softrefactoring.com">International Workshop on Refactoring</a> in Singapore
-              <!-- <LI> March 2016: I joined the John Maxwell Team as a <a href="http://www.johncmaxwellgroup.com/dannydig">Coach, Teacher and Speaker</a>  -->
+             <LI> March 2016: I joined the John Maxwell Team as a <a href="http://www.johncmaxwellgroup.com/dannydig">Coach, Teacher and Speaker</a>  -->
               <!--<LI> March 2016: I am grateful to NSF for awarding me the NSF CAREER this year. This brings the total funding for grants where I was a contributor to $15M. So thankful to live in a country that appreciates science and progress and where the american dream is still alive. -->
              <!-- <LI> March 2016: I am giving an <a href="http://www.techoregon.org/events/refactoring-asynchronous-execution-mobile">industry technical talk</a> about refactoring for async execution on mobile apps. This event is hosted by the <a href="http://www.techoregon.org/what-we-do">Technology Association of Oregon</a>.  -->
               <!--<LI> Oct 2015: Congratulations to my former MS student, <a href="http://cosmin.radoi.net">Cosmin Radoi</a>, for the David Kuck Outstanding MS Thesis Award at the CS department at Illinois for the MS research he did with me.
@@ -186,6 +186,7 @@ cellSpacing=5 cellPadding=5 border=0>
               </UL>
             <P><STRONG>LEADERSHIP and SERVICE: </STRONG></P>
             <UL>
+              <LI> Faculty Mentoring Chair: FSE'18, ASE'19, ICSE'19, ICSME'19, ICSE'20, OOPSLA'21 
               <LI> Program Committee: ICSE'20, ICSE'19, ICSME'19, ICSE'17, ICSE'16 (Visions 2025 Track), ASE'15, ICSE'15 (NIER track), ASE'14, OOPSLA'13, ECOOP'13, ASE'13, IPDPS'13, ICSM'13, ICSE'13 (NIER track), <a href="http://www.sigsoft.org/fse20/">FSE'12</a>, OOPSLA'12 (ERC), ECOOP'12 (ERC), <a href="http://selab.fbk.eu/icsm2012/">ICSM'12</a>, <a href="http://www.multicore-systems.org/msept">MSEPT'12</a>, <a href="http://refactoring.info/WRT12">WRT'12</a>, <a href="csmr2012.sed.hu">CSMR'12</a>, <a href="http://issta11.unl.edu/">ISSTA'11</a>, <A href="http://ppopp11.ac.uma.es/tiki-index.php">PPoPP'11</A> (ERC), <a href="http://2011.icse-conferences.org/content/src-call">ACM Student Research Competition at ICSE'11</a>, <a href="http://fse18.cse.wustl.edu/callfordemos.html">Research Demos @ FSE'10</a>, <A href="http://soft.vub.ac.be/iwpse-evol/organisation">IWPSE'10</A>, <A 
               href="http://www.oopsla.org/oopsla2009/">OOPSLA'09</A>, <A href="http://www.multicore-systems.org/iwmse2009">IWMSE'09</A>, <A href="http://soft.vub.ac.be/iwpse-evol/2009_start">IWPSE'09</A>, <A href="http://refactoring.info/WRT09">WRT'09</A>, <A  href="http://www.hotswup.org/2009/">HotSWUp'09</A>
               <LI> Proceedings Chair: OOPSLA'13
