updated final project

--- a/courses/csci7000-008_Sp22/finalProject.html
+++ b/courses/csci7000-008_Sp22/finalProject.html
@@ -75,7 +75,7 @@ and open the template in the editor.
                         </li>
                          <li>
                             <h5>LESSONS LEARNED</h5>
-                            This is where you write a brief retrospective of your experience on working on the project in CSCI 7000-005 Fall 2021. 
+                            This is where you write a brief retrospective of your experience on working on the project in CSCI 7000-008 Spring 2022. 
                         
                         In this Section please discuss some of these Reflections points:
 (1) what went well in the project and in the future you should more off
