added Steve Brumer to the schedule

--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -392,6 +392,7 @@ money.
             <td>04/21</td>
             <td>Everyone</td>
             <td> <ul>
+            <li> Interview with <a href="https://www.linkedin.com/in/steve-brumer-9b737a/">Steve Brumer</a>, IoT Executive of the Year and IoT Thought Leader 
             <li> Discussion Chapter 7: The Cost Question. </li>
             </td>
         </tr>
