added new dates

--- a/courses/csci7000-008_Sp22/index.html
+++ b/courses/csci7000-008_Sp22/index.html
@@ -400,7 +400,7 @@ money.
         <tr>
             <td>04/26</td>
             <td> Ange</td>
-            <td> <ul>  
+            <td> Intelligent Recognition of Sports Teaching Video Based on Computer Vision Technology (by Zhou, ICISCAE'21)<ul>  
             <li> </li>
             </td>
         </tr>
@@ -414,7 +414,7 @@ money.
         </tr>
         
          <tr>
-            <td>Finals week</td>
+            <td>05/03</td>
             <td>No final exam.</td>
             <td> <ul>
             <li> <a href='./finalProject.html' rel='nofollow'>Submit final project</a>
