--- a/courses/csci7000-008_Sp22/finalProject.html
+++ b/courses/csci7000-008_Sp22/finalProject.html
@@ -88,7 +88,7 @@ and open the template in the editor.
             </ul>
                    
                 <h3>HAND-IN:</h3>
-                <p>Due on TBA at midnight during finals week. Each submits one PDF report via Canvas.
+                <p>Due on 05/03 at midnight during finals week. Each team submits one PDF report via Canvas.
               
          </div>
     </div>
