updated CV and webpage

--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@ cellSpacing=5 cellPadding=5 border=0>
  		
  		    <P> <B>Research Key Statistics</B>:
  		    <ul style="list-style-type:circle">
-            <li>$5.4M as lead PI, ($4.5M from NSF, $900K from industry). My share: $2.6M</li>
+            <li>$7.4M as lead PI, ($5.9M from NSF, $1.5M from industry). My share: $2.8M</li>
             <li>50+ peer-reviewed conference papers (see all in <a href="http://dblp.uni-trier.de/pers/hd/d/Dig:Danny">DBLP )</a></li>
                 <ul>
                    <li>9 paper awards at flagship/top conferences (FSE'17, OOPSLA'17, ICSME'17, FSE'16, ICSE'14, ICSME'15, ISSTA'13, ICST'13) + 1 most influential award (N-10 years) at ICSME'15 + 4 award nominees</li>
@@ -65,7 +65,7 @@ cellSpacing=5 cellPadding=5 border=0>
                 </ul>
             
             <li>9 tools released in industrial-strength products, 40M+ downloads</li>
-            <li><a href="http://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">5900+ citations</a>, h-index of 42, >400 citations for top-cited paper</li>
+            <li><a href="http://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">6200+ citations</a>, h-index of 42, >400 citations for top-cited paper</li>
             </ul>  
 
 
