--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ cellSpacing=5 cellPadding=5 border=0>
       <BR><BR><A class=nav href="./students.html">students &gt;</A>
       <BR><BR><A class=nav href="./music.html">music &gt;</A>
       <BR><BR><A class=nav href="./cv.html">curriculum vitae &gt;</A>
-     <BR><BR><IMG alt="Danny Dig" src="me.jpg" HEIGHT="428" WIDTH="282"></TD>
+     <BR><BR><IMG alt="Danny Dig" src="DannyDig.jpg" HEIGHT="428" WIDTH="282"></TD>
     <TD style="VERTICAL-ALIGN: top; TEXT-ALIGN: left">
       <TABLE 
       style="WIDTH: 100%; BACKGROUND-COLOR: rgb(255,255,255); TEXT-ALIGN: left" 
