--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <!--<Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
             <br>
             <br> -->
-            <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, we invite you to our <a href="https://hopin.com/events/nsf-center-on-pervasive-personalized-intelligence-meeting-workshop/registration">hybrid event on April 7-8, 2022</a>. Please watch this short <a href="https://www.youtube.com/watch?v=wq6xQHhJkAs">video invitation</a>. I would love to schedule a discovery session to learn how we can serve you with our <a href="http://ppicenter.org">NSF industry-university consortium</a>.
+            <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, we invite you to watch this short <a href="https://www.youtube.com/watch?v=wq6xQHhJkAs">video</a> to see how you can leverage our PhD students and faculty. I would love to schedule a discovery session to learn how we can serve you with our <a href="http://ppicenter.org">NSF industry-university consortium</a>.
             <br>
            <!-- <br><Strong> Open Positions: </Strong> looking for a postdoc to join my team. -->
             
@@ -77,7 +77,7 @@ cellSpacing=5 cellPadding=5 border=0>
   
  <P>He (co-)authored 60+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">6200+ times</a>. His group's research was recognized with 9 paper awards at the flagship and top conferences in SE (FSE'17, OOPSLA'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">6300+ times</a>. His group's research was recognized with 9 paper awards at the flagship and top conferences in SE (FSE'17, OOPSLA'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
  4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15, and 3 winners of the ACM Student Research Competition. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
  His research group released dozens of software systems, among them the
